--- a/dia-01/dia01.html
+++ b/dia-01/dia01.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dia 01 de DOM</title>
     <link rel="stylesheet" href="">
 </head>
 <body>
+<header>
+    <h1 id="titulo">Melhores Filmes</h1>
+    <p class="thebest" id="obraprima">Senhor dos Anéis: O Retorno do Rei</p>
+    <p class="melhores">Harry potter e a Pedra Filosofal</p>
+    <p class="melhores">Cães de Aluguel</p>
+    <p class="melhores">Goodfellas</p>
+    <p class="melhores">Apertem o Cinto o Piloto Sumiu</p>
+</header>
     <script src="script.js"></script>
 </body>
 </html>
